#141 avoid google guava